# wgmask

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: toolchain-linux-aarch64.cmake  toolchain-linux-amd64.cmake  toolchain-termux-aarch64.cmake  toolchain-termux-i686.cmake  toolchain-win64.cmake  toolchain-windows-amd64.cmake
src/: main.cpp
src/container/: dictionary.h  dictionary_imp.h  linked_list.h  linked_list_imp.h
src/pool/: base_pool.h  buffer_pool.cpp  buffer_pool.h  buffer_pool_imp.h  thread_pool.h  thread_pool_imp.h
src/prevent/: non_copyable.h  non_instantiable.h  non_moveable.h
src/socket/: udp_socket.cpp  udp_socket.h  udp_socket_in.cpp  udp_socket_in.h  udp_socket_to.cpp  udp_socket_to.h
src/util/: class.h  clear.h  hash.cpp  hash.h  logger.h  logger_imp.h  mutator.cpp  mutator.h  socket.cpp  socket.h
